--- a/csharp/entrep.csharp.tutorials/entrep.nutshell.tests/entrep.nutshell.tests.csproj
+++ b/csharp/entrep.csharp.tutorials/entrep.nutshell.tests/entrep.nutshell.tests.csproj
@@ -45,13 +45,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Generics\GenericsTests.cs" />
     <Compile Include="Generics\MyGenericArray.cs" />
+    <Compile Include="Lambda\LambdaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
