--- a/java/java_tutorials/pom.xml
+++ b/java/java_tutorials/pom.xml
@@ -15,11 +15,25 @@
   </properties>
 
   <dependencies>
+  	<!-- unit test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		
   </dependencies>
 </project>
