--- a/java/java_tutorials/pom.xml
+++ b/java/java_tutorials/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     
     <!-- logback -->
+    	<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
