--- a/java/java_tutorials/pom.xml
+++ b/java/java_tutorials/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jacoco.execution.filter>com/entrepidea/data/access/xml/*.class</jacoco.execution.filter>
   </properties>
 
   <dependencies>
@@ -40,5 +41,44 @@
 			<version>1.1.2</version>
 		</dependency>
 		
+		 <dependency>
+            <groupId>org.jvnet.jaxb2_commons</groupId>
+            <artifactId>jaxb2-basics-runtime</artifactId>
+            <version>1.11.1</version>
+        </dependency>
+		
   </dependencies>
+  <build>
+  	<plugins>
+   		<plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.13.1</version>
+                <executions>
+                    <execution>
+                        <id>Radial JDBC Schema</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <args>
+                                <arg>-XtoString</arg>
+                                <arg>-Xequals</arg>
+                                <arg>-XhashCode</arg>
+                                <arg>-nv</arg>
+                            </args>
+                            <plugins>
+                                <plugin>
+                                    <groupId>org.jvnet.jaxb2_commons</groupId>
+                                    <artifactId>jaxb2-basics</artifactId>
+                                    <version>0.6.3</version>
+                                </plugin>
+                            </plugins>
+                            <schemaDirectory>src/main/resources/schema</schemaDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+  	</plugins>
+  </build>
 </project>
