--- a/java/spring_tutorials/pom.xml
+++ b/java/spring_tutorials/pom.xml
@@ -109,6 +109,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 
