--- a/android/ImgurDnloadr/app/build.gradle
+++ b/android/ImgurDnloadr/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.entrepidea.imgurdnloadr"
         minSdkVersion 21
@@ -22,10 +22,10 @@ android {
         }
     }
 
-    /*compileOptions {
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }*/
+    }
 }
 
 dependencies {
