python code update

--- a/.gitignore
+++ b/.gitignore
@@ -455,3 +455,43 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+
+#ignore these C++ related intermediate files
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+cmake-build-debug
+*.cbp
+*.make
+*.includecache
+*.cmake
+
+# Executables
+*.exe
+*.out
+*.app
