--- a/experiments/medium-blog-kafka-udemy/udemy-reviews-aggregator/src/main/resources/application.conf
+++ b/experiments/medium-blog-kafka-udemy/udemy-reviews-aggregator/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 kafka {
-  bootstrap.servers = "localhost:9092"
+  bootstrap.servers = "evolution:9092"
   bootstrap.servers = ${?KAFKA_BOOTSTRAP_SERVERS}
-  schema.registry.url = "http://localhost:8081"
+  schema.registry.url = "http://evolution:8081"
   schema.registry.url = ${?SCHEMA_REGISTRY_URL}
   valid.topic.name = "udemy-reviews-valid"
   valid.topic.name = ${?VALID_TOPIC_NAME}
