--- a/java/java.core/pom.xml
+++ b/java/java.core/pom.xml
@@ -67,5 +67,12 @@
           <scope>compile</scope>
       </dependency>
 
+        <!-- twitter4j dependency -->
+      <dependency>
+          <groupId>org.twitter4j</groupId>
+          <artifactId>twitter4j-core</artifactId>
+          <version>[4.0,)</version>
+      </dependency>
+
   </dependencies>
 </project>
