--- a/java/java.core/pom.xml
+++ b/java/java.core/pom.xml
@@ -89,6 +89,12 @@
           <version>0.9.1.2</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>23.0</version>
+      </dependency>
 
 
   </dependencies>
