add new changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 # Ada Library Information
 *.ali
 
+##############################################
+#
+#below is the ignore files for itelliJ JAVA
+#
+##############################################
+*.ipr
+*.iws
 
 ##############################################
 #
