--- a/java/java.core/pom.xml
+++ b/java/java.core/pom.xml
@@ -97,5 +97,19 @@
       </dependency>
 
 
+      <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
+      <dependency>
+          <groupId>org.jooq</groupId>
+          <artifactId>jooq</artifactId>
+          <version>3.14.4</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.jooq/jool -->
+      <dependency>
+          <groupId>org.jooq</groupId>
+          <artifactId>jool</artifactId>
+          <version>0.9.14</version>
+      </dependency>
+
   </dependencies>
 </project>
