--- a/java/webservice.ReSTFul.Jersey/pom.xml
+++ b/java/webservice.ReSTFul.Jersey/pom.xml
@@ -38,12 +38,12 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
         </dependency>
-        <!-- uncomment this to get JSON support:
+        <!-- uncomment this to get JSON support: -->
          <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
-        -->
+
     </dependencies>
 
 
