update java code

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 ##############################################
 #
-#below is the ignore files for itelliJ JAVA
+#below is the ignore files for intelliJ JAVA
 #
 ##############################################
 *.ipr
