--- a/java/framework.spring.boot/pom.xml
+++ b/java/framework.spring.boot/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0-SNAPSHOT</version>
 
 		<properties>
-        <main.class>com.entrepidea.jersey.network.example1.v3.ServerMain</main.class>
+        <main.class>com.entrepidea.network.example1.v3.ServerMain</main.class>
 		</properties>
 
     <dependencies>
@@ -29,18 +29,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop &ndash;&gt;
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.6.1</version>
-        </dependency>
+        </dependency>-->
 
         <!-- to support ExtendWith annotation-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.4.2</version>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -48,9 +48,35 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <!-- for apache dbcp datasource - Jonathan -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.210</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 
     </dependencies>
 
@@ -63,7 +89,7 @@
             but why must we specify the mainClass here? 
 						Or
             I tried to remove the configuration tag from below and run
-            mvn exec:java -Dexec.mainClass="com.entrepidea.core.aop.example1.Main"
+            mvn exec:java -Dexec.mainClass="com.entrepidea.aop.example1.Main"
             but it failed with message "mainClass not found". 
 
             Also, does Spring boot have a starter that includes this plugin?
