--- a/java/java.core/pom.xml
+++ b/java/java.core/pom.xml
@@ -32,19 +32,19 @@
 			<version>1.3.2</version>
 		</dependency>
 
-      <dependency>
+<!--      <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
           <version>1.7.25</version>
-      </dependency>
+      </dependency>-->
 
       <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
-      <dependency>
+<!--      <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-log4j12</artifactId>
           <version>1.7.25</version>
           <scope>test</scope>
-      </dependency>
+      </dependency>-->
 
       <dependency>
           <groupId>com.google.guava</groupId>
@@ -89,27 +89,22 @@
           <version>0.9.1.2</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-      <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-          <version>23.0</version>
-      </dependency>
+
 
 
       <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
-      <dependency>
+<!--      <dependency>
           <groupId>org.jooq</groupId>
           <artifactId>jooq</artifactId>
           <version>3.14.4</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/org.jooq/jool -->
+      &lt;!&ndash; https://mvnrepository.com/artifact/org.jooq/jool &ndash;&gt;
       <dependency>
           <groupId>org.jooq</groupId>
           <artifactId>jool</artifactId>
           <version>0.9.14</version>
-      </dependency>
+      </dependency>-->
 
   </dependencies>
 </project>
