config and build file changes

--- a/java/java_playground/source/pom.xml
+++ b/java/java_playground/source/pom.xml
@@ -92,5 +92,6 @@
     <module>core</module>
     <module>spring</module>
     <module>messaging</module>
+    <module>database</module>
   </modules>
 </project>
