--- a/java/java_playground/source/messaging/pom.xml
+++ b/java/java_playground/source/messaging/pom.xml
@@ -40,5 +40,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
+
     </dependencies>
 </project>
