--- a/java/java_playground/source/pom.xml
+++ b/java/java_playground/source/pom.xml
@@ -93,5 +93,6 @@
     <module>spring</module>
     <module>messaging</module>
     <module>database</module>
+      <module>bpm</module>
   </modules>
 </project>
