--- a/java/java_playground/source/bpm/pom.xml
+++ b/java/java_playground/source/bpm/pom.xml
@@ -20,10 +20,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-spring</artifactId>
+            <version>7.57.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>jbpm-spring-boot-starter-basic</artifactId>
+            <version>7.57.0.Final</version>
         </dependency>
     </dependencies>
 </project>
