--- a/java/java_playground/source/core/pom.xml
+++ b/java/java_playground/source/core/pom.xml
@@ -60,6 +60,14 @@
       <version>0.9.5.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
