--- a/java/java_playground/source/core/pom.xml
+++ b/java/java_playground/source/core/pom.xml
@@ -67,6 +67,11 @@
       <version>2.2.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.oracle.database.jdbc</groupId>
+      <artifactId>ojdbc11</artifactId>
+      <version>21.9.0.0</version>
+    </dependency>
 
   </dependencies>
 
