--- a/java/java_playground/source/database/pom.xml
+++ b/java/java_playground/source/database/pom.xml
@@ -73,9 +73,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.oracle.jdbc</groupId>
+            <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc11</artifactId>
-            <version>10.2.0.3.0</version>
+            <version>21.9.0.0</version>
         </dependency>
 
 
